--- a/src/Containers/MainLayout/MainLayout.module.css
+++ b/src/Containers/MainLayout/MainLayout.module.css
@@ -4,16 +4,7 @@
     padding: 40px;
 }
 
-.Navbar{
-    margin: 0 auto;
-}
-.Navbar li{
-    display: inline-flex;
-    text-align: center;
-
-    padding: 0 20px;
-}
-
-.Navbar li a{
-    text-decoration: none;
+.NavigationBar > div{
+    margin-left:15px;
+    margin-right:15px;
 }
