--- a/src/Components/PhotoCard/SearchInput/SearchInput.module.css
+++ b/src/Components/PhotoCard/SearchInput/SearchInput.module.css
@@ -2,3 +2,9 @@
     margin-top: 150px;
     text-align: center;
 }
+
+@media(max-width:700px){
+    .ButtonSpacing{
+        margin-top:20px;
+    }
+}
