--- a/src/Containers/PhotoSearchPage/PhotoSearchPage.module.css
+++ b/src/Containers/PhotoSearchPage/PhotoSearchPage.module.css
@@ -1,10 +1,17 @@
 
 .GeneralDivs{
     text-align: center;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    font-weight: 600;
 }
 
 .ContainerClass{
     margin-bottom: 50px;
+}
+
+@media (max-width:600px){
+    .ContainerClass{
+        margin-left: 10px;
+        margin-right:10px;
+    }
 }
