--- a/src/Containers/Homepage/Homepage.module.css
+++ b/src/Containers/Homepage/Homepage.module.css
@@ -2,32 +2,61 @@
     text-align: center;
     padding: 40px;
     height: 100%;
+    z-index: 2;
+    background-color: rgba(255, 255, 255, 0.5) !important;
+    margin-top: 30px;
+    backdrop-filter: blur(3px);
+    width:73vw;
 }
 
 .HomepageText p{
     margin: 0 auto;
-    padding-left: 10em;
-    padding-right: 10em;
+    padding-left: 3em;
+    padding-right: 3em;
     padding-top: 10px;
     font-size: 20px;
 }
 
+.Footnote{
+    position: absolute;
+    bottom: 100px;
+    background-color: rgba(255, 255, 255, 0.5) !important;
+    padding: 10px;
+    border-radius: 3px;
+    font-size: 20px;
+}
+.particles{
+    position:absolute; top:0; left:0; z-index:-2;
+    height: max-content;
+    width: auto;
+    background: #232526;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 @media (min-width:760px) and (max-width: 1000px){
     .HomepageText p{
         padding-left: 1em;
         padding-right: 1em;
+        
     }
 }
 
 @media (max-width:600px){
     .HomepageText{
         padding: 10px;
+        width:90vw;
     }
     
     .HomepageText p{
-        padding-left: 1.5em;
-        padding-right: 1.5em;
+        font-size: 16px;
+        padding-left: .5em;
+        padding-right: .5em;
+        
 
+    }
+
+    .HomepageText h1 {
+        font-size: 30px;
     }
 }
 
@@ -50,5 +79,50 @@
         padding-right: 1em;
         padding-top: 10px;
         font-size: 15px;
+    }
+}
+
+
+@media (min-width:1440px){
+    .HomepageText{
+        padding: 40px;
+        margin-top: 50px;
+        backdrop-filter: blur(3px);
+        width:73vw;
+    }
+    
+    .HomepageText p{
+        margin: 0 auto;
+        padding-left: 3.2em;
+        padding-right: 3.2em;
+    }
+    
+    .Footnote{
+        border-radius: 5px;
+    }
+}
+
+
+@media (min-width:1920px){
+    .HomepageText{
+        padding: 80px;
+        margin-top: 100px;
+        backdrop-filter: blur(3px);
+        width:75vw;
+    }
+    
+    .HomepageText p{
+        margin: 0 auto;
+        padding-left: 3.2em;
+        padding-right: 3.2em;
+        font-size: 30px;
+    }
+    .HomepageText h1{
+        font-size: 50px;
+    }
+    
+    .Footnote{
+        border-radius: 5px;
+        font-size: 30px;
     }
 }
