--- a/src/Containers/MainLayout/MainLayout.module.css
+++ b/src/Containers/MainLayout/MainLayout.module.css
@@ -4,3 +4,9 @@
     margin-left:15px;
     margin-right:15px;
 }
+
+@media(min-width:1920px){
+    .NavigationBar  a{
+        font-size: 26px;
+    }
+}
