--- a/src/Containers/Homepage/Homepage.module.css
+++ b/src/Containers/Homepage/Homepage.module.css
@@ -51,12 +51,17 @@
         font-size: 16px;
         padding-left: .5em;
         padding-right: .5em;
-        
-
     }
 
     .HomepageText h1 {
         font-size: 30px;
+    }
+
+    .Footnote{
+        border-radius: 5px;
+        font-size: 14px;
+        width:90vw;
+        text-align: center;
     }
 }
 
